fixes spacing error

--- a/src/components/Utility/BannerText/BannerText.module.scss
+++ b/src/components/Utility/BannerText/BannerText.module.scss
@@ -6,6 +6,7 @@
   padding: $spaceS;
   width: 100%;
   max-width: $contentWidth;
+  margin-top: $spaceL;
 
   h1,
   h2 {
